crates/uitest/fixtures/ty_check/error_generic_struct.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_generic_struct.fe
---
error[16-0003]: `#[error]` structs must be non-generic
  ┌─ error_generic_struct.fe:2:15
  │
2 │ struct Generic<T> {
  │               ^^^ generics are not supported on `#[error]` structs
  │
  = remove generic parameters from the error struct
